tests/transpiler/x/ocaml/cross_join.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let customers = [[("id", 1); ("name", "Alice")]; [("id", 2); ("name", "Bob")]; [("id", 3); ("name", "Charlie")]] in
  let orders = [[("id", 100); ("customerId", 1); ("total", 250)]; [("id", 101); ("customerId", 2); ("total", 125)]; [("id", 102); ("customerId", 1); ("total", 300)]] in
  let result = (List.concat (List.map (fun o -> (List.map (fun c -> [("orderId", (List.assoc "id" o)); ("orderCustomerId", (List.assoc "customerId" o)); ("pairedCustomerName", (List.assoc "name" c)); ("orderTotal", (List.assoc "total" o))]) customers)) orders)) in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") ["--- Cross Join: All order-customer pairs ---"]));
  (try List.iter (fun entry ->
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") ["Order"; string_of_int (List.assoc "orderId" entry)); "(customerId:"; string_of_int (List.assoc "orderCustomerId" entry)); ", total: $"; string_of_int (List.assoc "orderTotal" entry)); ") paired with"; (List.assoc "pairedCustomerName" entry)]));
    with Continue -> ()) result with Break -> ())
